--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   margin: 0;
-  padding: 0;
+  padding: 0 0 0 10px;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
   font-size: 18px;
@@ -41,13 +41,20 @@ li {
 .btn {
   align-self: center;
   justify-self: center;
-  width: 300px;
+  width: 330px;
   height: 50px;
   border: 1px solid black;
   background: transparent;
 }
 
-.btn:hover {
+#add-fav {
+  width: 200px;
+  height: 50px;
+  border: 1px solid black;
+  background: transparent;
+}
+
+.btn:hover, #add-fav:hover {
   background-color: rgb(217, 236, 245);
   cursor: pointer;
 }
@@ -75,6 +82,7 @@ li {
   grid-template-rows: 1fr;
   justify-items: center;
   gap: 1rem;
+  padding-top: 10px;
 }
 
 h2 {
